--- a/5structure_exercise2/5structure_exercise2.vcxproj
+++ b/5structure_exercise2/5structure_exercise2.vcxproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="buildpage.cpp" />
+    <ClCompile Include="group.cpp" />
     <ClCompile Include="listing.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="processrequest.cpp" />
