--- a/5structure_exercise2/5structure_exercise2.vcxproj.filters
+++ b/5structure_exercise2/5structure_exercise2.vcxproj.filters
@@ -56,5 +56,14 @@
     <ClCompile Include="group.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="advertisement.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="client.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="date.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
